--- a/windowsStore/index.html
+++ b/windowsStore/index.html
@@ -745,7 +745,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 wow fadeInLeft">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.665053360533!2d30.59999406801647!3d50.44733927274873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cff3e338dad1%3A0xab7aec2eeba48d18!2sHaryachi%20Tury!5e0!3m2!1sru!2spl!4v1688571874722!5m2!1sru!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.665053360533!2d30.59999406801647!3d50.44733927274873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cff3e338dad1%3A0xab7aec2eeba48d18!2sHaryachi%20Tury!5e0!3m2!1sru!2spl!4v1688571874722!5m2!1sru!2spl" width="600" height="450" style="border:0;" class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          </div>
           <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0 wow fadeInRight">
             <div class="contacts_info">
               <h3>Юридический адрес:</h3>
