--- a/uber/index.html
+++ b/uber/index.html
@@ -40,7 +40,7 @@
                     </div>
     
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
-                        <div class="subheader_call">Get in toush with us</div>
+                        <div class="subheader_call">Get in touch with us</div>
                         <a href="tel:+784957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
     
