--- a/uber/index.html
+++ b/uber/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
                     <h1 class="promo_header">UBER PARTNERS COMPANY!</h1>
-                    <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+                    <h2 class="promo_subheader">WE’RE HIRING DRIVERS! WITH YOUR OWN CAR!</h2>
                     <div class="promo_descr">UBER is a rapidly evolving company that stands out as the market leader in the taxi industry. The company maintains complete transparency, allowing users to monitor all processes through their personal accounts. Additionally, Uber offers a bonus system that rewards users for completing orders during peak times.
                         <br><br>
                         We are one of the partners and have established ourselves as one of the best teams in Kiev.<br> Our drivers earn between 25,000 and 40,000 per month.
