--- a/policy.html
+++ b/policy.html
@@ -18,7 +18,7 @@
                 <div class="title title_fsz16 policy__block_descr">This personal data processing policy is drafted in accordance with the requirements of the Law of Ukraine "On the Protection of Personal Data" (hereinafter referred to as the Personal Data Law) and defines the procedure for processing personal data and measures taken to ensure the security of personal data by Koroviakov Volodymyr (hereinafter referred to as the Operator).</div>
                 <ul>
                     <li class="policy__list title title_fsz16">1.1. The Operator's main goal and condition for conducting its activities is to respect human and citizen rights and freedoms when processing their personal data, including the protection of the right to privacy, personal and family secrets.</li>
-                    <li class="policy__list title title_fsz16">1.2. The Operator's personal data processing policy (hereinafter referred to as the Policy) applies to all information that the Operator may receive about visitors to the website https://vladimirkoroviakov.github.io</li>
+                    <li class="policy__list title title_fsz16">1.2. The Operator's personal data processing policy (hereinafter referred to as the Policy) applies to all information that the Operator may receive about visitors to the website https://vladimikoroviakov.github.io</li>
                 </ul>
             </div>
             
@@ -33,7 +33,7 @@
                         2.2. Blocking of personal data – temporary cessation of personal data processing (except in cases where processing is necessary for the clarification of personal data).
                     </li>
                     <li class="policy__list title title_fsz16">
-                        2.3. Website – a collection of graphical and informational materials, as well as software and databases, which ensure their accessibility on the internet at https://vladimirkoroviakov.github.io.
+                        2.3. Website – a collection of graphical and informational materials, as well as software and databases, which ensure their accessibility on the internet at https://vladimikoroviakov.github.io.
                     </li>
                     <li class="policy__list title title_fsz16">
                         2.4. Personal data information system – a collection of personal data contained in databases, which ensures their processing through information technology and technical means.
@@ -48,13 +48,13 @@
                         2.7. Operator – a state body, municipal body, legal entity, or individual who, independently or jointly with other persons, organizes and/or carries out the processing of personal data, and also determines the purposes of processing personal data, the composition of personal data to be processed, and actions (operations) performed with personal data.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        2.8. Personal data – any information relating directly or indirectly to a specific or identifiable User of the website https://vladimirkoroviakov.github.io.
+                        2.8. Personal data – any information relating directly or indirectly to a specific or identifiable User of the website https://vladimikoroviakov.github.io.
                     </li>
                     <li class="policy__list title title_fsz16">
                         2.9. Personal data permitted by the personal data subject for distribution – personal data to which the subject of the personal data has provided unrestricted access by giving consent for the processing of personal data allowed for distribution as provided by the Personal Data Law (hereinafter referred to as personal data allowed for distribution).
                     </li>
                     <li class="policy__list title title_fsz16">
-                        2.10. User – any visitor to the website https://vladimirkoroviakov.github.io.
+                        2.10. User – any visitor to the website https://vladimikoroviakov.github.io.
                     </li>
                     <li class="policy__list title title_fsz16">
                         2.11. Provision of personal data – actions aimed at disclosing personal data to a specific person or a specific group of persons.
@@ -85,7 +85,7 @@
                        – In case the subject of personal data withdraws consent for processing personal data, the Operator has the right to continue processing personal data without the consent of the subject if there are grounds specified in the Personal Data Protection Law;
                     </li>
                     <li class="policy__list title title_fsz16">
-                       – Independently determine the composition and list of measures necessary and sufficient to ensure the fulfillment of obligations provided by the Personal Data Protection Law and the legal acts adopted pursuant to it, unless otherwise provided by the Personal Data Protection Law or other federal laws.
+                       – Independently determine the composition and list of measures necessary and sufficient to ensure the fulfillment of obligations provided by the Personal Data Protection Law and the legal acts adopted pursuant to it, unless otherwise provided by the Personal Data Protection Law or other laws.
                     </li>
                     <li class="policy__list title title_fsz16">
                        3.2. The Operator is obliged to:
@@ -125,7 +125,7 @@
                        4.1. Personal data subjects have the right to:
                     </li>
                     <li class="policy__list title title_fsz16">
-                       – Receive information regarding the processing of their personal data, except in cases provided by federal laws. The information is provided to the personal data subject by the Operator in an accessible form and should not contain personal data related to other personal data subjects, except in cases where there are legal grounds for disclosing such personal data. The list of information and the procedure for obtaining it are determined by the Personal Data Protection Law;
+                       – Receive information regarding the processing of their personal data, except in cases provided by laws. The information is provided to the personal data subject by the Operator in an accessible form and should not contain personal data related to other personal data subjects, except in cases where there are legal grounds for disclosing such personal data. The list of information and the procedure for obtaining it are determined by the Personal Data Protection Law;
                     </li>
                     <li class="policy__list title title_fsz16">
                        – Request the Operator to clarify, block, or destroy their personal data if it is incomplete, outdated, inaccurate, illegally obtained, or not necessary for the declared purpose of processing, and take legal actions to protect their rights;
@@ -163,7 +163,7 @@
                     <li class="policy__list title title_fsz16">5.1. Full name.</li>
                     <li class="policy__list title title_fsz16">5.2. Email address.</li>
                     <li class="policy__list title title_fsz16">
-                        5.3. The website also collects and processes anonymized data about visitors (including cookies) using web analytics services (Yandex.Metrica, Google Analytics, and others).
+                        5.3. The website also collects and processes anonymized data about visitors (including cookies) using web analytics services (Google Analytics, Microsoft Clarity and others).
                     </li>
                     <li class="policy__list title title_fsz16">
                         5.4. The data mentioned in this Policy are collectively referred to as Personal Data.
@@ -212,7 +212,7 @@
                         6.6. When processing personal data, accuracy, sufficiency, and, in necessary cases, relevance to the purposes of processing personal data must be ensured. The Operator takes the necessary measures and/or ensures that incomplete or inaccurate data is deleted or clarified.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        6.7. Personal data is stored in a form that allows the identification of the personal data subject for no longer than required by the purposes of personal data processing unless the retention period for personal data is established by federal law, a contract, or an agreement to which the personal data subject is a party. Processed personal data must be destroyed or anonymized upon reaching the processing purposes or if the need to achieve these purposes is lost unless otherwise provided by federal law.
+                        6.7. Personal data is stored in a form that allows the identification of the personal data subject for no longer than required by the purposes of personal data processing unless the retention period for personal data is established by law, a contract, or an agreement to which the personal data subject is a party. Processed personal data must be destroyed or anonymized upon reaching the processing purposes or if the need to achieve these purposes is lost unless otherwise provided by law.
                     </li>
                 </ul>
             </div>
@@ -253,7 +253,7 @@
                         8.1. The legal grounds for the Operator's processing of personal data are:
                     </li>
                     <li class="policy__list title title_fsz16">
-                        – list the legal regulations governing relationships related to your activities. For example, if your activity is related to information technology, such as website creation, you can mention the Federal Law "On Information, Information Technologies, and Information Protection" dated 27.07.2006 N 149-FZ;
+                        – list the legal regulations governing relationships related to your activities. For example, if your activity is related to information technology, such as website creation, you can mention the Law "On Information, Information Technologies, and Information Protection";
                     </li>
                     <li class="policy__list title title_fsz16">
                         – the Operator's statutory documents;
@@ -262,13 +262,13 @@
                         – agreements concluded between the Operator and the data subject;
                     </li>
                     <li class="policy__list title title_fsz16">
-                        – federal laws and other regulatory legal acts in the field of personal data protection;
+                        – laws and other regulatory legal acts in the field of personal data protection;
                     </li>
                     <li class="policy__list title title_fsz16">
                         – the User's consent to the processing of their personal data and to the processing of personal data allowed for distribution.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        8.2. The Operator processes the User's personal data only if they are filled in and/or submitted by the User through special forms on the website https://vladimirkoroviakov.github.io or sent to the Operator via email. By filling out the relevant forms and/or sending their personal data to the Operator, the User agrees to this Policy.
+                        8.2. The Operator processes the User's personal data only if they are filled in and/or submitted by the User through special forms on the website https://vladimikoroviakov.github.io or sent to the Operator via email. By filling out the relevant forms and/or sending their personal data to the Operator, the User agrees to this Policy.
                     </li>
                     <li class="policy__list title title_fsz16">
                         8.3. The Operator processes anonymized data about the User if this is allowed in the User's browser settings (such as enabling the storage of cookies and the use of JavaScript).
@@ -287,10 +287,10 @@
                         9.1. The processing of personal data is carried out with the consent of the data subject to the processing of their personal data.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        9.2. The processing of personal data is necessary to achieve the goals defined by the international treaty of the Russian Federation or the law, and to fulfill the functions, powers, and duties assigned to the operator by the legislation of the Russian Federation.
+                        9.2. The processing of personal data is necessary to achieve the goals defined by the international treaty of the Ukraine or the law, and to fulfill the functions, powers, and duties assigned to the operator by the legislation of the Ukraine.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        9.3. The processing of personal data is necessary for the administration of justice, the execution of a judicial act, or an act of another body or official that is subject to enforcement under the legislation of the Russian Federation on enforcement proceedings.
+                        9.3. The processing of personal data is necessary for the administration of justice, the execution of a judicial act, or an act of another body or official that is subject to enforcement under the legislation of the Ukraine on enforcement proceedings.
                     </li>
                     <li class="policy__list title title_fsz16">
                         9.4. The processing of personal data is necessary for the execution of a contract, the party to which, or the beneficiary or guarantor of which is the data subject, as well as for the conclusion of a contract at the initiative of the data subject or a contract under which the data subject will be the beneficiary or guarantor.
@@ -302,7 +302,7 @@
                         9.6. Processing is carried out for personal data to which unrestricted access has been granted by the data subject or at their request (hereinafter – publicly available personal data).
                     </li>
                     <li class="policy__list title title_fsz16">
-                        9.7. Processing is carried out for personal data that are subject to publication or mandatory disclosure in accordance with federal law.
+                        9.7. Processing is carried out for personal data that are subject to publication or mandatory disclosure in accordance with law.
                     </li>
                 </ul>
             </div>
@@ -334,7 +334,7 @@
                         10.7. The Operator ensures the confidentiality of personal data during processing.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        10.8. The Operator stores personal data in a form that allows identifying the data subject no longer than is necessary for the purposes of processing personal data, unless the storage period of personal data is established by federal law, a contract, the party of which is the beneficiary or guarantor of which is the data subject.
+                        10.8. The Operator stores personal data in a form that allows identifying the data subject no longer than is necessary for the purposes of processing personal data, unless the storage period of personal data is established by law, a contract, the party of which is the beneficiary or guarantor of which is the data subject.
                     </li>
                     <li class="policy__list title title_fsz16">
                         10.9. The condition for the cessation of processing personal data may be the achievement of the goals of processing personal data, the expiration of the consent of the data subject, or the withdrawal of consent by the data subject, as well as the detection of unlawful processing of personal data.
@@ -387,7 +387,7 @@
                         14.2. Any changes to the personal data processing policy by the Operator will be reflected in this document. The policy is effective indefinitely until replaced by a new version.
                     </li>
                     <li class="policy__list title title_fsz16">
-                        14.3. The current version of the Policy is freely available online at https://vladimirkoroviakov.github.io/privacy.
+                        14.3. The current version of the Policy is freely available online at https://vladimikoroviakov.github.io/policy.html.
                     </li>
                 </ul>
             </div>
