--- a/Food/index.html
+++ b/Food/index.html
@@ -13,8 +13,8 @@
                 <img src="icons/logo.svg" alt="Логотип">
             </div>
             <nav class="header__links">
-                <a href="#offer" class="header__link">Наше предложение</a>
-                <a href="#calculator" class="header__link">Расчитать калории</a>
+                <a href="#" class="header__link">Доставка питания</a>
+                <a href="#" class="header__link">Второй пункт</a>
             </nav>
         </div>
         <div class="header__right-block">
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="tabcontent">
-                    <img src="img/tabs/vegy.jpg" alt="vegy">
+                    <img src="img/tabs/hamburger.jpg" alt="balanced">
                     <div class="tabcontent__descr">
                         Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
                     </div>
@@ -63,8 +63,8 @@
                 <div class="tabheader">
                     <h3>Выберите стиль питания</h3>
                     <div class="tabheader__items">
-                        <div class="tabheader__item">Фитнес</div>
-                        <div class="tabheader__item tabheader__item_active">Премиум</div>
+                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
+                        <div class="tabheader__item">Премиум</div>
                         <div class="tabheader__item">Постное</div>
                         <div class="tabheader__item">Сбалансированное</div>
                     </div>
@@ -76,7 +76,7 @@
 
     <div class="divider"></div>
 
-    <div class="offer" id="offer">
+    <div class="offer">
         <div class="bgc_y"></div>
         <div class="container">
             <div class="offer__text">
@@ -134,7 +134,7 @@
 
     <div class="divider"></div>
 
-    <div class="calculating" id="calculator">
+    <div class="calculating">
         <div class="container">
             <h2 class="title">Рассчитаем вашу потребность в калориях?
             </h2>
