--- a/Food/index.html
+++ b/Food/index.html
@@ -13,8 +13,8 @@
                 <img src="icons/logo.svg" alt="Логотип">
             </div>
             <nav class="header__links">
-                <a href="#" class="header__link">Доставка питания</a>
-                <a href="#" class="header__link">Второй пункт</a>
+                <a href="#menu" class="header__link">Наше меню</a>
+                <a href="#delivery" class="header__link">Доставка питания</a>
             </nav>
         </div>
         <div class="header__right-block">
@@ -89,7 +89,7 @@
                 <button class="btn btn_dark" data-modal>Связаться с нами</button>
             </div>
         </div>
-        <div class="container">
+        <div id="delivery" class="container">
             <div class="offer__advantages">
                 <h2>Быстро и полезно</h2>
                 <div class="offer__advantages-text">
@@ -182,7 +182,7 @@
 
     <div class="divider"></div>
 
-    <div class="menu">
+    <div id="menu" class="menu">
         <h2 class="title">Наше меню на день</h2>
 
         <div class="menu__field">
