--- a/Food/index.html
+++ b/Food/index.html
@@ -76,7 +76,7 @@
 
     <div class="divider"></div>
 
-    <div class="offer">
+    <div id="delivery" class="offer">
         <div class="bgc_y"></div>
         <div class="container">
             <div class="offer__text">
@@ -89,7 +89,7 @@
                 <button class="btn btn_dark" data-modal>Связаться с нами</button>
             </div>
         </div>
-        <div id="delivery" class="container">
+        <div class="container">
             <div class="offer__advantages">
                 <h2>Быстро и полезно</h2>
                 <div class="offer__advantages-text">
