--- a/Food/index.html
+++ b/Food/index.html
@@ -182,7 +182,7 @@
 
     <div class="divider"></div>
 
-    <div class="menu">
+    <div id="menu" class="menu">
         <h2 class="title">Наше меню на день</h2>
 
         <div class="menu__field">
