--- a/Food/index.html
+++ b/Food/index.html
@@ -13,16 +13,16 @@
                 <img src="icons/logo.svg" alt="Логотип">
             </div>
             <nav class="header__links">
-                <a href="#menu" class="header__link">Наше меню</a>
-                <a href="#delivery" class="header__link">Доставка питания</a>
+                <a href="#menu" class="header__link">Our menu</a>
+                <a href="#delivery" class="header__link">Food delivery</a>
             </nav>
         </div>
         <div class="header__right-block">
-            <button class="btn btn_white" data-modal>Связаться с нами</button>
+            <button class="btn btn_white" data-modal>Contact us</button>
         </div>
     </header>
     <div class="sidepanel">
-        <div class="sidepanel__text"><span>Социальные сети</span></div>
+        <div class="sidepanel__text"><span>Social media</span></div>
         <div class="sidepanel__divider"></div>
         <a href="#" class="sidepanel__icon">
             <img src="icons/instagram.svg" alt="instagram">
@@ -61,16 +61,16 @@
                     </div>
                 </div>
                 <div class="tabheader">
-                    <h3>Выберите стиль питания</h3>
+                    <h3>Choose a nutrition style</h3>
                     <div class="tabheader__items">
-                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
-                        <div class="tabheader__item">Премиум</div>
-                        <div class="tabheader__item">Постное</div>
-                        <div class="tabheader__item">Сбалансированное</div>
+                        <div class="tabheader__item tabheader__item_active">Fitness</div>
+                        <div class="tabheader__item">Premium</div>
+                        <div class="tabheader__item">Lean</div>
+                        <div class="tabheader__item">Balanced</div>
                     </div>
                 </div>
             </div>
-            <div class="preview__life">Живи полной жизнью!</div>
+            <div class="preview__life">Live life to the fullest!</div>
         </div>
     </div>
 
@@ -80,24 +80,24 @@
         <div class="bgc_y"></div>
         <div class="container">
             <div class="offer__text">
-                <h2 class="title">Что мы можем вам предложить?</h2>
+                <h2 class="title">What can we offer you?</h2>
                 <div class="offer__descr">
-                    Наша основная идея - это правильное питание. Оно может быть простым и вкусным. Мы не просто доставка, мы сервис! Мы взяли на себя все расчеты БЖУ, калорийности, объемов порций и прочие важные, но скучные аспекты. Вам остается только полезная, сытная и правильная еда, которую мы привозим прямо под дверь.
+                    Our core idea is healthy eating. It can be simple and delicious. We’re not just a delivery service; we’re a full-service solution! We’ve taken care of all the calculations for proteins, fats, carbs, calorie counts, portion sizes, and other important but tedious details. All that’s left for you is nutritious, satisfying, and wholesome meals that we deliver right to your door.
                 </div>
             </div>
             <div class="offer__action">
-                <button class="btn btn_dark" data-modal>Связаться с нами</button>
+                <button class="btn btn_dark" data-modal>Contact us</button>
             </div>
         </div>
         <div class="container">
             <div class="offer__advantages">
-                <h2>Быстро и полезно</h2>
+                <h2>Fast and healthy</h2>
                 <div class="offer__advantages-text">
-                    Готовка дома занимает много сил, времени и нервов. Мы привозим еду сразу на целый день, и ты можешь действовать так, как тебе удобно, не подстраиваясь ни под кого и будучи уверенным в качестве продукта!
+                    Cooking at home takes a lot of effort, time, and patience. We deliver food for the entire day, allowing you to live on your terms without adjusting to anyone else, while being confident in the quality of the products!
                 </div>
                 <h2>Правильный рацион</h2>
                 <div class="offer__advantages-text">
-                    Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их приготовления и дробления рациона.
+                    We have developed a special menu that considers all the nuances of healthy eating, from the balance of proteins, fats, and carbs to their preparation and meal portioning.
                 </div>
             </div>
             <div class="offer__slider">
@@ -136,44 +136,43 @@
 
     <div class="calculating">
         <div class="container">
-            <h2 class="title">Рассчитаем вашу потребность в калориях?
-            </h2>
+            <h2 class="title">Calculate your calorie needs</h2>
             <div class="calculating__field">
                 <div class="calculating__subtitle">
-                    Ваш пол
+                    Your gender
                 </div>
                 <div class="calculating__choose" id="gender">
-                    <div id="female" class="calculating__choose-item calculating__choose-item_active">Женщина</div>
-                    <div id="male" class="calculating__choose-item">Мужчина</div>
+                    <div id="female" class="calculating__choose-item calculating__choose-item_active">Female</div>
+                    <div id="male" class="calculating__choose-item">Male</div>
                 </div>
 
                 <div class="calculating__subtitle">
-                    Ваша конституция
+                    Your body type
                 </div>
                 <div class="calculating__choose calculating__choose_medium">
-                    <input type="text" id="height" placeholder="Введите рост" class="calculating__choose-item">
-                    <input type="text" id="weight" placeholder="Введите вес"  class="calculating__choose-item">
-                    <input type="text" id="age" placeholder="Введите возраст" class="calculating__choose-item">
+                    <input type="text" id="height" placeholder="Enter height" class="calculating__choose-item">
+                    <input type="text" id="weight" placeholder="Enter weight"  class="calculating__choose-item">
+                    <input type="text" id="age" placeholder="Enter age" class="calculating__choose-item">
                 </div>
 
                 <div class="calculating__subtitle">
-                    Выберите вашу физическая активность
+                    Choose your physical activity level
                 </div>
                 <div class="calculating__choose calculating__choose_big">
-                    <div data-ratio="1.2" id="low" class="calculating__choose-item">Низкая активность </div>
-                    <div data-ratio="1.375" id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
-                    <div data-ratio="1.55" id="medium" class="calculating__choose-item">Умеренная активность</div>
-                    <div data-ratio="1.725" id="high" class="calculating__choose-item">Высокая активность</div>
+                    <div data-ratio="1.2" id="low" class="calculating__choose-item">Low activity</div>
+                    <div data-ratio="1.375" id="small"  class="calculating__choose-item calculating__choose-item_active">Moderately low activity</div>
+                    <div data-ratio="1.55" id="medium" class="calculating__choose-item">Moderate activity</div>
+                    <div data-ratio="1.725" id="high" class="calculating__choose-item">High activity</div>
                 </div>
 
                 <div class="calculating__divider"></div>
 
                 <div class="calculating__total">
                     <div class="calculating__subtitle">
-                        Ваша суточная норма калорий:
+                        Your daily calorie requirement:
                     </div>
                     <div class="calculating__result">
-                        <span>2700</span> ккал
+                        <span>2700</span> kcal
                     </div>
                 </div>
             </div>
@@ -183,38 +182,38 @@
     <div class="divider"></div>
 
     <div id="menu" class="menu">
-        <h2 class="title">Наше меню на день</h2>
+        <h2 class="title">Our menu for the day</h2>
 
         <div class="menu__field">
             <div class="container">
                 <div class="menu__item">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
-                    <h3 class="menu__item-subtitle">Меню "Фитнес"</h3>
-                    <div class="menu__item-descr">Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Продукт активных и здоровых людей. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!</div>
+                    <h3 class="menu__item-subtitle">Fitness menu</h3>
+                    <div class="menu__item-descr">“Fitness menu” is a new approach to meal preparation: more fresh vegetables and fruits. A product for active and healthy people. It’s a completely new product with an optimal price and high quality!</div>
                     <div class="menu__item-divider"></div>
                     <div class="menu__item-price">
-                        <div class="menu__item-cost">Цена:</div>
-                        <div class="menu__item-total"><span>229</span> грн/день</div>
+                        <div class="menu__item-cost">Price:</div>
+                        <div class="menu__item-total"><span>229</span> uah/day</div>
                     </div>
                 </div>
                 <div class="menu__item">
                     <img src="img/tabs/elite.jpg" alt="elite">
-                    <h3 class="menu__item-subtitle">Меню “Премиум”</h3>
-                    <div class="menu__item-descr">В меню “Премиум” мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!</div>
+                    <h3 class="menu__item-subtitle">Premium Menu</h3>
+                    <div class="menu__item-descr">In the "Premium" menu, we use not only beautiful packaging design but also high-quality dishes. Red fish, seafood, fruits – a restaurant menu without going to a restaurant!</div>
                     <div class="menu__item-divider"></div>
                     <div class="menu__item-price">
-                        <div class="menu__item-cost">Цена:</div>
-                        <div class="menu__item-total"><span>550</span> грн/день</div>
+                        <div class="menu__item-cost">Price:</div>
+                        <div class="menu__item-total"><span>550</span> uah/day</div>
                     </div>
                 </div>
                 <div class="menu__item">
                     <img src="img/tabs/post.jpg" alt="post">
-                    <h3 class="menu__item-subtitle">Меню "Постное"</h3>
-                    <div class="menu__item-descr">Меню “Постное” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения, молоко из миндаля, овса, кокоса или гречки, правильное количество белков за счет тофу и импортных вегетарианских стейков. </div>
+                    <h3 class="menu__item-subtitle">"Lean" Menu</h3>
+                    <div class="menu__item-descr">The "Lean" menu is a careful selection of ingredients: a complete absence of animal products, milk made from almonds, oats, coconut, or buckwheat, and the right amount of protein through tofu and imported vegetarian steaks.</div>
                     <div class="menu__item-divider"></div>
                     <div class="menu__item-price">
-                        <div class="menu__item-cost">Цена:</div>
-                        <div class="menu__item-total"><span>430</span> грн/день</div>
+                        <div class="menu__item-cost">Price:</div>
+                        <div class="menu__item-total"><span>430</span> uah/day</div>
                     </div>
                 </div>
             </div>
@@ -223,12 +222,12 @@
 
     <div class="order">
         <div class="container">
-            <div class="title">Заказывай пробный день прямо сейчас!</div>
+            <div class="title">Order a trial day right now!</div>
             <form action="#" class="order__form">
-                <input required placeholder="Ваше имя" name="name" type="text" class="order__input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="order__input">
+                <input required placeholder="Your name" name="name" type="text" class="order__input">
+                <input required placeholder="Your phone number" name="phone" type="phone" class="order__input">
                 <img src="icons/right.svg" alt="right">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
+                <button class="btn btn_dark btn_min">Call me back</button>
             </form>
         </div>
     </div>
@@ -239,32 +238,32 @@
         <div class="bgc_y"></div>
         <div class="container">
             <div class="promotion__text">
-                <div class="title">Акция для новых клиентов!</div>
+                <div class="title">Promotion for new clients!</div>
                 <div class="promotion__descr">
-                    Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
-                    Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
+                    We value every client and offer you the chance to become one of them on very favorable terms. 
+                    Anyone who orders a week's food delivery will receive a <span>20% discount!</span>
                     <br><br>
-                    Акция закончится 20 мая в 00:00
+                    The promotion ends on May 20 at 00:00.
                 </div>
             </div>
             <div class="promotion__timer">
-                <div class="title">Осталось до конца акции:</div>
+                <div class="title">Time left until the end of the promotion:</div>
                 <div class="timer">
                     <div class="timer__block">
                         <span id="days">12</span>
-                        дней
+                        days
                     </div>
                     <div class="timer__block">
                         <span id="hours">20</span>
-                        часов
+                        hours
                     </div>
                     <div class="timer__block">
                         <span id="minutes">56</span>
-                        минут
+                        minutes
                     </div>
                     <div class="timer__block">
                         <span id="seconds">20</span>
-                        секунд
+                        seconds
                     </div>
                 </div>
             </div>
@@ -274,7 +273,7 @@
     <footer class="footer">
         <div class="container">
             <div class="social">
-                <div class="subtitle">Мы в социальных сетях:</div>
+                <div class="subtitle">We are on social media:</div>
                 <a href="#" class="link">instagram</a>
                 <a href="#" class="link">facebook</a>
             </div>
@@ -282,7 +281,7 @@
                 <img src="icons/veg.svg" alt="pepper">
             </div>
             <div class="call">
-                <div class="subtitle">Или позвоните нам</div>
+                <div class="subtitle">Or call us</div>
                 <a href="#" class="link">+380678341034</a>
                 <a href="#" class="link">+380500941356</a>
             </div>
@@ -294,10 +293,10 @@
             <div class="modal__content">
                 <form action="#">
                     <div class="modal__close" data-close>&times;</div>
-                    <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
-                    <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
-                    <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
-                    <button class="btn btn_dark btn_min">Перезвонить мне</button>
+                    <div class="modal__title">We will contact you as soon as possible!</div>
+                    <input required placeholder="Your name" name="name" type="text" class="modal__input">
+                    <input required placeholder="Your phone number" name="phone" type="phone" class="modal__input">
+                    <button class="btn btn_dark btn_min">Call me back</button>
                 </form>
             </div>
         </div>
