Update index.html (Translation fixes)

--- a/Food/index.html
+++ b/Food/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header__left-block">
             <div class="header__logo">
-                <img src="icons/logo.svg" alt="Логотип">
+                <img src="icons/logo.svg" alt="Logo">
             </div>
             <nav class="header__links">
                 <a href="#menu" class="header__link">Our menu</a>
@@ -39,25 +39,25 @@
                 <div class="tabcontent">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <div class="tabcontent__descr">
-                        Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
+                        The “Fitness” menu is a new approach to meal preparation: more fresh vegetables and fruits. For people who are into sports; active and healthy. It’s a completely new product with an optimal price and high quality!
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <div class="tabcontent__descr">
-                        Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!                                     
+                        The “Premium” menu – we use not only beautiful packaging design but also high-quality execution of dishes. Red fish, seafood, fruits – a restaurant menu without going to a restaurant!                                     
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/post.jpg" alt="post">
                     <div class="tabcontent__descr">
-                        Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!                                     
+                        Our special “Lean Menu” is a careful selection of ingredients: a complete absence of animal products. Complete harmony with yourself and nature in every element! Everything will be Yumi!                                 
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/hamburger.jpg" alt="balanced">
                     <div class="tabcontent__descr">
-                        Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                        The “Balanced” menu is designed to meet all scientific recommendations for your diet. We carefully calculate your needs for calories, proteins, fats, and carbohydrates, and create the best dishes for you.
                     </div>
                 </div>
                 <div class="tabheader">
@@ -95,7 +95,7 @@
                 <div class="offer__advantages-text">
                     Cooking at home takes a lot of effort, time, and patience. We deliver food for the entire day, allowing you to live on your terms without adjusting to anyone else, while being confident in the quality of the products!
                 </div>
-                <h2>Правильный рацион</h2>
+                <h2>Proper diet</h2>
                 <div class="offer__advantages-text">
                     We have developed a special menu that considers all the nuances of healthy eating, from the balance of proteins, fats, and carbs to their preparation and meal portioning.
                 </div>
