--- a/Food/index.html
+++ b/Food/index.html
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="promotion__timer">
-                <div class="title">Time left until the end of the promotion:</div>
+                <div class="title">Time left in the promotion:</div>
                 <div class="timer">
                     <div class="timer__block">
                         <span id="days">12</span>
