--- a/uber/index.html
+++ b/uber/index.html
@@ -21,8 +21,8 @@
                     <li class="menu_item"><a href="#require" class="menu_link">With your own car</a></li>
                     <li class="menu_item"><a href="#require" class="menu_link">With a company car</a></li>
                     <li class="menu_item"><a href="#require" class="menu_link">Requirements</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Contact</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Submit a request</a></li>
+                    <li class="menu_item"><a href="#locations" class="menu_link">Locations</a></li>
+                    <li class="menu_item"><a href="#" onclick="alert('This is a sample page. No actual application will be registered')" class="menu_link">Submit a request</a></li>
                 </ul>
             </div>
             <div class="hamburger">
@@ -40,13 +40,13 @@
                     </div>
     
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
-                        <div class="subheader_call">Get in touch with us</div>
+                        <div class="subheader_call">Get in toush with us</div>
                         <a href="tel:+784957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
     
                     <div class="col-6 col-md-3">
                         <a href="tel:+784957970988" class="xs-visible subheader_phone">8 495 797 09 88</a>
-                        <button class="subheader_btn">ORDER A CALL</button>
+                        <button class="subheader_btn" onclick="window.location.href='tel:+1234567890'">CALL US NOW</button>
                     </div>
                 </div>
             </div>
@@ -58,12 +58,12 @@
             <div class="row">
                 <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
                     <h1 class="promo_header">UBER PARTNERS COMPANY!</h1>
-                    <h2 class="promo_subheader">WE’RE HIRING DRIVERS! WITH YOUR OWN CAR!</h2>
+                    <h2 class="promo_subheader">WE’RE HIRING DRIVERS ! WITH YOUR OWN CAR!</h2>
                     <div class="promo_descr">UBER is a rapidly evolving company that stands out as the market leader in the taxi industry. The company maintains complete transparency, allowing users to monitor all processes through their personal accounts. Additionally, Uber offers a bonus system that rewards users for completing orders during peak times.
                         <br><br>
                         We are one of the partners and have established ourselves as one of the best teams in Kiev.<br> Our drivers earn between 25,000 and 40,000 per month.
                     </div>
-                    <button class="promo_btn">SEND APPLICATION!</button>
+                    <button class="promo_btn" onclick="alert('This is a sample page. No actual application will be registered')">SEND APPLICATION!</button>
                 </div>
             </div>
         </div>
@@ -261,7 +261,7 @@
         </div>
     </section>
 
-    <section class="world">
+    <section class="world" id="locations">
         <div class="container">
             <div class="label label_white">CITIES</div>
             <h2 class="title title_white">ALL OVER THE WORLD</h2>
@@ -315,7 +315,5 @@
             </div>
         </div>
     </footer>
-
-   <script src="js/script.js"></script>
 </body>
 </html>
